--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Application variables
+NODE_ENV=production
 MONGO_URI=mongodb+srv://fdadmin:<password>@cluster0.avgrx.mongodb.net/<database>?retryWrites=true&w=majority
+DATABASE_URL=postgresql://postgres:root@localhost:5432/<database_name>?schema=public
 JWT_SECRET=
 
 # Heroku CI/CD variables
