--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
-  "name": "nestjs-starter",
+  "name": "nestarter",
   "version": "0.1.0",
-  "description": "Nestjs starter app",
-  "author": "Izzu Zantya Fawwas",
-  "private": true,
+  "description": "Build NestJS app without common setup headache",
+  "keywords": [
+    "nestjs",
+    "starter",
+    "backend",
+    "typescript"
+  ],
+  "homepage": "https://github.com/izzuzantyaf/nestarter",
+  "bugs": {
+    "url": "https://github.com/izzuzantyaf/nestarter/issues"
+  },
   "license": "MIT",
+  "author": "Izzu Zantya Fawwas <izzuzantyaf@gmail.com> (https://izzuzantyaf.space)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/izzuzantyaf/nestarter.git"
+  },
+  "private": "false",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -30,6 +44,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.0",
+    "@prisma/client": "^4.5.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -59,6 +74,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "prisma": "^4.5.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
