refactor: casual refactor

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,6 @@
 # Application variables
-NODE_ENV=production
+APP_ENV=production
+APP_PORT=8080
 MONGO_URI=mongodb+srv://fdadmin:<password>@cluster0.avgrx.mongodb.net/<database>?retryWrites=true&w=majority
-DATABASE_URL=postgresql://postgres:root@localhost:5432/<database_name>?schema=public
-JWT_SECRET=
-
-# Heroku CI/CD variables
-HEROKU_API_KEY=
-HEROKU_EMAIL=
-
-# Railway CI/CD variables
-RAILWAY_TOKEN=
+POSTGRES_URL=postgresql://postgres:root@localhost:5432/<database_name>?schema=public
+JWT_SECRET=supersecretkey
